# Triangle-OpenGL

./: CMakeLists.txt
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp  triangle_mesh.cpp
